# aurum

./: .gitmodules  CMakeLists.txt  README.md
cmake-modules/: CheckCompiler.cmake
cmake-modules/config-tests/: ConfigTest64Bit.cmake  ConfigTestGDB.cmake  ConfigTestLTO.cmake  ConfigTestLibrt.cmake  ConfigTestSSE4.2.cmake
cmake-modules/config-tests/cmake-tests/: test-64-bit.cpp  test-lto.cpp
config-includes/: AurumConfig.h.in
src/allocators/: MemoryManager.cpp  MemoryManager.hpp  PoolAllocator.cpp  PoolAllocator.hpp  SmallBlockAllocator.cpp  SmallBlockAllocator.hpp
src/basetypes/: AurumBase.hpp  AurumErrors.cpp  AurumErrors.hpp  AurumTraits.hpp  AurumTypes.cpp  AurumTypes.hpp  AurumTypesFwd.hpp  Cloneable.hpp  Comparable.hpp  Comparators.hpp  Downcastable.hpp  EComparable.hpp  Hashable.hpp  RefCountable.hpp  Stringifiable.hpp
src/comparisons/: Comparators.hpp
src/containers/: BitSet.cpp  BitSet.hpp  ContainersBase.hpp  DList.hpp  DListTypes.hpp  Deque.hpp  DequeTypes.hpp  HashTable.hpp  HeapCommon.hpp  MultiWayHeap.hpp  OrderedMap.hpp  OrderedSet.hpp  PriorityQueue.hpp  Queue.hpp  RefCache.hpp  SList.hpp  SListTypes.hpp  Stack.hpp  StaticBitSet.hpp  TupleUtils.hpp  UnorderedMap.hpp  UnorderedSet.hpp  Vector.hpp
src/hashfuncs/: CityCRC.hpp  CityHash.cpp  CityHash.hpp  FNV.cpp  FNV.hpp  FNVHash.cpp  FNVHash.hpp  Hash.hpp  HashFunctions.hpp  MurmurHash.cpp  MurmurHash.hpp  SpookyHash.cpp  SpookyHash.hpp
src/hashing/: CityCRC.hpp  CityHash.cpp  CityHash.hpp  FNVHash.cpp  FNVHash.hpp  HashFunctions.hpp  Hashers.hpp  MurmurHash.cpp  MurmurHash.hpp  SpookyHash.cpp  SpookyHash.hpp
src/io/: AurumIOException.hpp  AurumStreamBuffer.hpp  BZip2Filter.cpp  BZip2Filter.hpp  Categories.hpp  CodeFilter.cpp  CodeFilter.hpp  CodeWriter.cpp  CodeWriter.hpp  FilterBase.cpp  FilterBase.hpp  FilterCategories.hpp  FilteredStreams.cpp  FilteredStreams.hpp  LZMAFilter.cpp  LZMAFilter.hpp  ZLibFilter.cpp  ZLibFilter.hpp
src/logging/: LogManager.cpp  LogManager.hpp
src/memory/: ManagedPointer.hpp  RefCountable.hpp
src/plugins/: PluginLoader.cpp  PluginLoader.hpp
src/primeutils/: PrecomputedPrimeList.hpp  PrimeGenerator.cpp  PrimeGenerator.hpp
src/progoptions/: OptionMap.cpp  OptionMap.hpp  OptionValue.cpp  OptionValue.hpp  Options.hpp  Parsers.cpp  Parsers.hpp  ProgramOptionException.hpp  ProgramOptions.cpp  ProgramOptions.hpp
src/ranges/: CartesianProduct.hpp
src/shell/: ShellExpansion.cpp  ShellExpansion.hpp  ShellUtils.cpp  ShellUtils.hpp
src/stringification/: StrUtils.cpp  StrUtils.hpp  Stringifiers.hpp
src/strutils/: StrUtils.cpp  StrUtils.hpp
src/timers/: Timers.cpp  Timers.hpp
tests/unit-tests/: BZip2FilterTests.cpp  CartesianProductTests.cpp  CodeWriterTests.cpp  DListTests.cpp  DequeTests.cpp  FilteredStreamTests.cpp  LZMAFilterTests.cpp  OrderedMapTests.cpp  OrderedSetTests.cpp  PrimeGeneratorTest.cpp  PriorityQueueTests.cpp  ProgramOptionsTests.cpp  RCClass.hpp  RefCacheTests.cpp  SListTests.cpp  ShellExpTests.cpp  TupleUtilsTests.cpp  UnorderedMapTests.cpp  UnorderedSetTests.cpp  VectorTests.cpp  ZLibFilterTests.cpp
